--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "version": "0.0.1",
   "main": "./index",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-mocha-test": "~0.7.0",
-    "chai": "~1.8.1"
+    "chai": "~1.10.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-coffee": "~0.12.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-mocha-test": "~0.12.2"
   },
   "scripts": {
     "test": "grunt test"
