--- a/package.json
+++ b/package.json
@@ -1,17 +1,37 @@
 {
   "name": "kopi.js",
   "description": "API for ordering Singaporean Coffee",
-  "author": "cheeaun, chuyeow, laktek, soulofpeace",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "license": "MIT",
+  "maintainers": [
+    {
+      "name": "Lim Chee Aun",
+      "web": "http://cheeaun.com/"
+    }
+  ],
+  "contributors": [
+    {
+      "name": "Lakshan Perera",
+      "web": "http://laktek.com/"
+    },
+    {
+      "name": "Choon Kee Oh",
+      "web": "https://github.com/soulofpeace"
+    }
+  ],
   "main": "./index",
+  "browser": "dist/kopi.js",
   "devDependencies": {
-    "chai": "~1.10.0",
+    "babel": "~4.4.6",
+    "babelify": "~5.0.3",
+    "chai": "~2.0.0",
     "grunt": "~0.4.5",
-    "grunt-contrib-coffee": "~0.12.0",
-    "grunt-contrib-uglify": "^0.6.0",
-    "grunt-mocha-test": "~0.12.2"
+    "grunt-browserify": "~3.4.0",
+    "grunt-contrib-uglify": "~0.8.0",
+    "grunt-mocha-test": "~0.12.7"
   },
   "scripts": {
+    "dist": "grunt dist",
     "test": "grunt test"
   }
 }
