--- a/package.json
+++ b/package.json
@@ -4,20 +4,11 @@
   "version": "0.1.0",
   "license": "MIT",
   "maintainers": [
-    {
-      "name": "Lim Chee Aun",
-      "web": "http://cheeaun.com/"
-    }
+    "Lim Chee Aun (http://cheeaun.com/)"
   ],
   "contributors": [
-    {
-      "name": "Lakshan Perera",
-      "web": "http://laktek.com/"
-    },
-    {
-      "name": "Choon Kee Oh",
-      "web": "https://github.com/soulofpeace"
-    }
+    "Lakshan Perera (http://laktek.com/)",
+    "Choon Kee Oh (https://github.com/soulofpeace)"
   ],
   "main": "./index",
   "browser": "dist/kopi.js",
@@ -33,5 +24,32 @@
   "scripts": {
     "dist": "grunt dist",
     "test": "grunt test"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "babel": "^4.4.6",
+    "chai": "^2.0.0",
+    "babelify": "^5.0.3",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.4.0",
+    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-mocha-test": "^0.12.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kopijs/kopi.js.git"
+  },
+  "keywords": [
+    "kopi",
+    "kopijs",
+    "coffee",
+    "singapore"
+  ],
+  "author": "Lim Chee Aun <cheeaun@gmail.com> (http://cheeaun.com/)",
+  "bugs": {
+    "url": "https://github.com/kopijs/kopi.js/issues"
+  },
+  "homepage": "https://github.com/kopijs/kopi.js"
 }
